# SchoolTerminal

./: CMakeLists.txt  LICENCE  README.md
headers/: functionality.hpp
src/: CMakeLists.txt  Eleve.cpp  functionality.cpp  main.cpp
